--- a/configuration.properties
+++ b/configuration.properties
@@ -3,8 +3,11 @@
 browser=chrome
 
 #URL OF OUR WEB APPLICATION
-url=https://qa2.vytrack.com/
+url=https://qa1.vytrack.com/
 
 #CREDENTIALS
 user_name=storemanager85
 password=UserUser123
+
+storemanagerusername=storemanager85
+storemanagerpassword=UserUser123
